syntax = "proto3";

option csharp_namespace = "GrpcClient";

service Connections {
	rpc Subscribe (ClientRequest) returns (stream LogSomeInfo);
	rpc SendMessage (LogSomeInfo) returns (NewEmptyRequest);
}

message NewEmptyRequest {}

message ClientRequest {
	string clientName = 1;
	string clientMachineName = 2;
	string clientUserName = 3;
}

message LogSomeInfo {
	string name = 1;
	int32 id = 2;
}